Fix bug with embeds overflowing content width

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1887,7 +1887,7 @@ Usage (In Ghost editor):
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 100%;
+    width: 100%;
 }
 
 .kg-embed-card .fluid-width-video-wrapper {
